layout/base/RestyleManager.h
@@ -42,9 +42,10 @@ class Element;
  */
 class ServoRestyleState {
  public:
-  ServoRestyleState(ServoStyleSet& aStyleSet, nsStyleChangeList& aChangeList,
-                    nsTArray<nsIFrame*>& aPendingWrapperRestyles,
-                    nsTArray<nsIFrame*>& aPendingScrollAnchorSuppressions)
+  ServoRestyleState(
+      ServoStyleSet& aStyleSet, nsStyleChangeList& aChangeList,
+      nsTArray<nsIFrame*>& aPendingWrapperRestyles,
+      nsTArray<RefPtr<dom::Element>>& aPendingScrollAnchorSuppressions)
       : mStyleSet(aStyleSet),
         mChangeList(aChangeList),
         mPendingWrapperRestyles(aPendingWrapperRestyles),
@@ -140,8 +141,8 @@ class ServoRestyleState {
   //
   // This doesn't handle nested reframes. We'd need to rework quite some code to
   // do that, and so far it doesn't seem to be a problem in practice.
-  void AddPendingScrollAnchorSuppression(nsIFrame* aFrame) {
-    mPendingScrollAnchorSuppressions.AppendElement(aFrame);
+  void AddPendingScrollAnchorSuppression(dom::Element* aElement) {
+    mPendingScrollAnchorSuppressions.AppendElement(aElement);
   }
 
  private:
@@ -173,7 +174,7 @@ class ServoRestyleState {
   // before descendants.
   nsTArray<nsIFrame*>& mPendingWrapperRestyles;
 
-  nsTArray<nsIFrame*>& mPendingScrollAnchorSuppressions;
+  nsTArray<RefPtr<dom::Element>>& mPendingScrollAnchorSuppressions;
 
   // Since we're given a possibly-nonempty mPendingWrapperRestyles to start
   // with, we need to keep track of where the part of it we're responsible for
